--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "rda"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
+bitflags = "2.8.0"
+byteorder = "1.5.0"
